--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Flutter web application for DE Kannada Rajyotsava Badminton Tournament 2025",
   "scripts": {
     "build": "chmod +x build.sh && ./build.sh",
+    "build-direct": "curl -L https://storage.googleapis.com/flutter_infra_release/releases/stable/linux/flutter_linux_3.24.3-stable.tar.xz -o flutter.tar.xz && tar xf flutter.tar.xz && export PATH=\"$PATH:$PWD/flutter/bin\" && flutter config --enable-web && cd flutter_web && flutter pub get && flutter build web --release --web-renderer html",
     "start": "echo 'This is a Flutter web app. Use npm run build to build for production.'",
-    "postbuild": "echo 'Flutter web build completed. Files are in flutter_web/build/web/'"
+    "postbuild": "echo 'Flutter web build completed. Files are in flutter_web/build/web/'",
+    "test": "echo 'No tests specified for Flutter web build process'"
   },
   "repository": {
     "type": "git",
