Fix Render deployment - Force static site detection
- Renamed requirements.txt to requirements.txt.bak to prevent Python auto-detection
- Updated render.yaml with explicit static site configuration
- Added .renderignore to exclude Python files
- Enhanced build command with better logging
- Added DISABLE_COLLECTSTATIC environment variable

This should resolve the 'Empty build command; skipping build' issue
and prevent Render from treating this as a Python project.

--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,22 @@
 # Render Blueprint Configuration
-# Flutter Web Static Site Deployment
+# Flutter Web Static Site Deployment - Force Static Site Detection
 
 services:
   - type: web
     name: de-kannada-rajyotsava-tournament
     runtime: static
-    buildCommand: chmod +x build.sh && ./build.sh
+    repo: https://github.com/vrsimha-sys/DEKannadaRajyotsava2025
+    buildCommand: |
+      echo "==> Starting Flutter Web Build..."
+      chmod +x build.sh
+      ./build.sh
+      echo "==> Build completed, checking output..."
+      ls -la flutter_web/build/web/
     staticPublishPath: flutter_web/build/web
     envVars:
       - key: FLUTTER_WEB
         value: true
       - key: NODE_ENV
         value: production
+      - key: DISABLE_COLLECTSTATIC
+        value: 1
