--- a/render.yaml
+++ b/render.yaml
@@ -1,22 +1,14 @@
 # Render Blueprint Configuration
-# Flutter Web Static Site Deployment - Force Static Site Detection
+# Flutter Web Static Site Deployment
 
 services:
   - type: web
     name: de-kannada-rajyotsava-tournament
     runtime: static
-    repo: https://github.com/vrsimha-sys/DEKannadaRajyotsava2025
-    buildCommand: |
-      echo "==> Starting Flutter Web Build..."
-      chmod +x build.sh
-      ./build.sh
-      echo "==> Build completed, checking output..."
-      ls -la flutter_web/build/web/
+    buildCommand: chmod +x build.sh && ./build.sh
     staticPublishPath: flutter_web/build/web
     envVars:
       - key: FLUTTER_WEB
         value: true
       - key: NODE_ENV
         value: production
-      - key: DISABLE_COLLECTSTATIC
-        value: 1
