--- a/flutter_web/pubspec.yaml
+++ b/flutter_web/pubspec.yaml
@@ -20,6 +20,10 @@ dependencies:
   # Utilities
   intl: ^0.19.0
   
+  # PDF Generation
+  pdf: ^3.11.1
+  printing: ^5.12.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
