feat: Enhanced team management and PDF export functionality
- Added support for Owner, Owner Flat, and Captain Flat columns from Google Sheets
- Implemented bilingual team name display (Kannada + English) using Google Fonts
- Enhanced home page table with Owner and Owner Flat columns
- Updated mobile cards to show owner and captain flat information
- Redesigned PDF export to generate separate pages for Men, Women, and Kids teams
- Added comprehensive team headers on each PDF page (Team, Owner, Captain)
- Improved PDF layout with better spacing, fonts, and color-coded categories
- Added Google Fonts dependency for Kannada font support (Noto Sans Kannada)
- Enhanced data handling with proper null safety and fallbacks
- Maintained responsive design for all screen sizes

Technical improvements:
- Updated GoogleSheetsService.getTeams() to parse new columns (29-31)
- Created modular _buildTeamPage() method for PDF generation
- Added _buildTeamNameWithKannada() for bilingual display
- Enhanced error handling and user feedback
- Improved code organization and maintainability

--- a/flutter_web/pubspec.yaml
+++ b/flutter_web/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   pdf: ^3.11.1
   printing: ^5.12.0
   
+  # Fonts
+  google_fonts: ^6.1.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
