feat: Add desktop pagination for fixtures and improve standings calculation
- Add pagination for fixtures table on desktop (10 matches per page)
- Fix column mapping to match Google Sheets structure (Team 1, Team 2, etc.)
- Improve standings calculation with category-based filtering
- Add pagination controls with page indicators and navigation buttons
- Maintain mobile responsive design with original scrollable behavior
- Update Google Sheets service to use exact column names from sheet

--- a/flutter_web/pubspec.yaml
+++ b/flutter_web/pubspec.yaml
@@ -17,6 +17,10 @@ dependencies:
   # HTTP and API calls
   http: ^1.1.0
   
+  # Google Sheets API
+  googleapis: ^11.4.0
+  googleapis_auth: ^1.4.1
+  
   # Utilities
   intl: ^0.19.0
   
